--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="#FFFFFF"
+    android:background="#000000"
     android:padding="8dp">
 
     <!-- Title -->
@@ -21,7 +21,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="00:00"
-        android:textSize="24sp"
+        android:textColor="#FFFFFF"
+        android:textSize="96sp"
         android:layout_gravity="center_horizontal"/>
     <!-- List of Apps -->
     <ListView
