--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -29,6 +29,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginBottom="16dp">
 
+        <!-- Bottom left: Notifications -->
         <TextView
             android:id="@+id/textViewNotifications"
             android:layout_width="wrap_content"
@@ -36,8 +37,10 @@
             android:text="Notifications"
             android:textSize="18sp"
             android:textColor="#FFFFFF"
-            android:layout_marginEnd="16dp"/>
-
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="8dp"
+            android:layout_marginBottom="8dp"/>
         <TextView
             android:id="@+id/textViewMenu"
             android:layout_width="wrap_content"
@@ -45,15 +48,21 @@
             android:text="Menu"
             android:textSize="18sp"
             android:textColor="#FFFFFF"
-            android:layout_marginEnd="16dp"/>
-
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginBottom="8dp"/>
+        <!-- Bottom right: Shortcuts -->
         <TextView
             android:id="@+id/textViewShortcuts"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Shortcuts"
             android:textSize="18sp"
-            android:textColor="#FFFFFF"/>
+            android:textColor="#FFFFFF"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="8dp"
+            android:layout_marginBottom="8dp"/>
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
