--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,8 +13,7 @@
         android:text="00:00"
         android:textColor="#FFFFFF"
         android:textSize="80sp"
-        android:textStyle="bold"
-        android:fontFamily="monospace"
+        android:fontFamily="serif"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
