--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,18 +6,36 @@
     android:padding="8dp"
     android:background="#000000">
 
-    <TextView
-        android:id="@+id/textViewTime"
+    <LinearLayout
+        android:id="@+id/timeContainer"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="00:00"
-        android:textColor="#FFFFFF"
-        android:textSize="80sp"
-        android:fontFamily="serif"
+        android:orientation="horizontal"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="48dp"/>
+        android:layout_marginTop="48dp">
+
+        <TextView
+            android:id="@+id/textViewTime"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="00:00"
+            android:textColor="#FFFFFF"
+            android:textSize="48sp"
+            android:fontFamily="monospace"/>
+
+        <TextView
+            android:id="@+id/textViewAmPm"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="AM"
+            android:textColor="#FFFFFF"
+            android:textSize="24sp"
+            android:fontFamily="serif"
+            android:layout_gravity="bottom"
+            android:layout_marginStart="8dp"/>
+    </LinearLayout>
 
     <!-- Bottom left: Notifications -->
     <TextView
