--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,8 +22,12 @@
             android:layout_height="wrap_content"
             android:text="00:00"
             android:textColor="#FFFFFF"
-            android:textSize="72sp"
-            android:fontFamily="serif"/>
+            android:textSize="80sp"
+            android:fontFamily="serif"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginTop="48dp"/>
 
         <TextView
             android:id="@+id/textViewAmPm"
@@ -33,8 +37,21 @@
             android:textColor="#FFFFFF"
             android:textSize="24sp"
             android:fontFamily="serif"
-            android:layout_gravity="bottom"
-            android:layout_marginStart="8dp"/>
+            app:layout_constraintTop_toBottomOf="@id/textViewTime"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"/>
+
+        <TextView
+            android:id="@+id/textViewDate"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Thu, Jan 15"
+            android:textColor="#FFFFFF"
+            android:textSize="24sp"
+            android:fontFamily="serif"
+            app:layout_constraintTop_toBottomOf="@id/textViewAmPm"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"/>
     </LinearLayout>
 
     <!-- Bottom left: Notifications -->
