--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -49,7 +49,7 @@
             android:textColor="#FFFFFF"
             android:textSize="24sp"
             android:fontFamily="serif"
-            app:layout_constraintTop_toBottomOf="@id/textViewAmPm"
+            app:layout_constraintTop_toBottomOf="@id/textViewTime"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"/>
     </LinearLayout>
