--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -51,7 +51,7 @@
         android:textColor="#FFFFFF"
         android:textSize="18sp"
         android:fontFamily="serif"
-        app:layout_constraintTop_toBottomOf="@id/textViewTime"
+        app:layout_constraintTop_toBottomOf="@id/timeContainer"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
 
