--- a/app/src/main/res/layout/notification_list_item.xml
+++ b/app/src/main/res/layout/notification_list_item.xml
@@ -10,7 +10,7 @@
         android:layout_height="40dp"
         android:layout_gravity="center_vertical"
         android:contentDescription="App Icon"
-        android:src="@mipmap/ic_launcher" />
+        android:src="@android:drawable/sym_def_app_icon" />
 
     <TextView
         android:id="@+id/notificationText"
