--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,6 +1,6 @@
 <!-- res/values/styles.xml -->
 <resources>
-    <style name="MainText">
+    <style name="MainText" parent="Theme.AppCompat.DayNight.NoActionBar">
         <item name="android:textColor">#FFFFFF</item>
         <item name="android:fontFamily">serif</item>
     </style>
