--- a/app/src/main/res/layout/app_list_item.xml
+++ b/app/src/main/res/layout/app_list_item.xml
@@ -1,22 +1,10 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<TextView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/appLabel"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="horizontal"
-    android:padding="8dp"
-    android:gravity="center_vertical">
-
-    <ImageView
-        android:id="@+id/appIcon"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:scaleType="centerInside"
-        android:layout_marginEnd="12dp"/>
-
-    <TextView
-        android:id="@+id/appLabel"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        style="@style/MainText"
-        android:textSize="16sp"/>
-</LinearLayout>
+    android:drawableStart="@drawable/ic_launcher_foreground" 
+    android:drawablePadding="12dp"
+    style="@style/MainText"
+    android:textSize="16sp"
+    android:gravity="center_vertical"
+    android:padding="8dp"/>
