--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -2,6 +2,6 @@
 <resources>
     <style name="MainText" parent="Theme.AppCompat.DayNight.NoActionBar">
         <item name="android:textColor">#FFFFFF</item>
-        <item name="android:fontFamily">serif</item>
+        <!-- <item name="android:fontFamily">serif</item> -->
     </style>
 </resources>
