--- a/app/src/main/res/layout/fragment_notifications.xml
+++ b/app/src/main/res/layout/fragment_notifications.xml
@@ -25,7 +25,7 @@
         app:layout_constraintBottom_toBottomOf="parent">
 
         <TextView
-            android:id="@+id/textViewNotifications"
+            android:id="@+id/textViewClear"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -36,7 +36,7 @@
             android:layout_marginStart="4dp" />
 
         <TextView
-            android:id="@+id/textViewMenu"
+            android:id="@+id/textViewView"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -46,11 +46,11 @@
             style="@style/MainText" />
 
         <TextView
-            android:id="@+id/textViewShortcuts"
+            android:id="@+id/textViewClearAll"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:layout_gravity="end"
+            android:gravity="end"
             android:text="Clear All"
             android:textSize="18sp"
             style="@style/MainText"
