fix bottom text alignment

--- a/app/src/main/res/layout/fragment_notifications.xml
+++ b/app/src/main/res/layout/fragment_notifications.xml
@@ -29,7 +29,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:layout_gravity="start"
+            android:gravity="start"
             android:text="Clear"
             android:textSize="18sp"
             style="@style/MainText"
@@ -40,7 +40,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:layout_gravity="center"
+            android:gravity="center"
             android:text="View"
             android:textSize="18sp"
             style="@style/MainText" />
