--- a/app/src/main/res/layout/item_notification_list.xml
+++ b/app/src/main/res/layout/item_notification_list.xml
@@ -12,13 +12,26 @@
         android:contentDescription="App Icon"
         android:src="@android:drawable/sym_def_app_icon" />
 
-    <TextView
-        android:id="@+id/notificationText"
+    <LinearLayout
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_vertical"
+        android:orientation="vertical"
         android:layout_weight="1"
-        android:layout_marginStart="12dp"
-        android:text="Notification text"
-        android:textSize="16sp" />
+        android:layout_marginStart="12dp">
+
+        <TextView
+            android:id="@+id/notificationText"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Notification text"
+            android:textSize="16sp"
+            android:textColor="#FFFFFF" />
+
+        <TextView
+            android:id="@+id/notificationTimestamp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="12sp"
+            android:textColor="#FFFFFF" />
+    </LinearLayout>
 </LinearLayout>
