--- a/app/src/main/res/layout/item_notification_list.xml
+++ b/app/src/main/res/layout/item_notification_list.xml
@@ -21,17 +21,14 @@
 
         <TextView
             android:id="@+id/notificationText"
+            style="@style/NotificationText"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Notification text"
-            android:textSize="16sp"
-            android:textColor="#FFFFFF" />
+            android:layout_height="wrap_content"/>
 
         <TextView
             android:id="@+id/notificationTimestamp"
+            style="@style/NotificationTimestamp"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textSize="12sp"
-            android:textColor="#FFFFFF" />
+            android:layout_height="wrap_content"/>
     </LinearLayout>
 </LinearLayout>
