--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,7 +1,13 @@
-<!-- res/values/styles.xml -->
 <resources>
-    <style name="MainText" parent="Theme.AppCompat.DayNight.NoActionBar">
+    <style name="MainText">
         <item name="android:textColor">#FFFFFF</item>
-        <!-- <item name="android:fontFamily">serif</item> -->
+    </style>
+    <style name="NotificationText">
+        <item name="android:textSize">16sp</item>
+        <item name="android:textColor">#FFFFFF</item>
+    </style>
+    <style name="NotificationTimestamp">
+        <item name="android:textSize">12sp</item>
+        <item name="android:textColor">#FFFFFF</item>
     </style>
 </resources>
