--- a/app/src/main/res/layout/item_notification_list.xml
+++ b/app/src/main/res/layout/item_notification_list.xml
@@ -23,7 +23,9 @@
             android:id="@+id/notificationText"
             style="@style/NotificationText"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content"
+            android:maxLines="5"
+            android:ellipsize="end"/>
 
         <TextView
             android:id="@+id/notificationTimestamp"
